--- a/setup.tex
+++ b/setup.tex
@@ -1,23 +1,41 @@
 % !TeX root = ./main.tex
 
 
-%行高
-\renewcommand{\baselinestretch}{1.5} 
 
-%版型
-\usepackage[a4paper,left=3cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
+\usepackage{CJKutf8}
+\usepackage[utf8]{inputenc}
+\usepackage{geometry}
+\usepackage{fancyhdr}
+\usepackage{array}
+
+
+\geometry{
+    a4paper,
+    total={7in, 9.5in},
+    top=1.1in
+}
+
+\renewcommand{\footrulewidth}{0.4pt}
+\fontfamily{charter}\selectfont
+\pagenumbering{gobble}
+\linespread{1.2}
+
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{Team No.\teamno}
+\lhead{DSA Final Project Report}
+\lfoot{Ranking: \bestranking \quad Score: \bestscore}
+\rfoot{\teammembers}
+
+
+
 
 %數學
 \usepackage{amsmath}
 
-%表格
-\usepackage{tabularx}
-\usepackage{ltablex}
 
-%中文設定
-\usepackage{xeCJK} %讓中英文字體分開設置
-% Noto Font: Download here: https://www.google.com/get/noto/#sans-hant
-\setCJKmainfont{Noto Sans CJK TC}
+
+
 
 \usepackage{booktabs} % 畫分隔線
 
@@ -29,12 +47,7 @@
 %顏色
 \usepackage[dvipsnames]{xcolor}
 
-%標頭文字. 上欄
-\usepackage{fancyhdr} 
-\pagestyle{fancy}
-\fancyhf{}
-%頁碼
-\cfoot{\thepage} 
+
 
 %超連結
 \usepackage[unicode]{hyperref} %用 unicode防止中文亂碼
@@ -52,7 +65,6 @@
 \usepackage{fontawesome5} %gallery of fontawesome: https://mirror-hk.koddos.net/CTAN/fonts/fontawesome5/doc/fontawesome5.pdf
 
 %文包圖
-\usepackage{wrapfig}
 \usepackage{subcaption}
 \usepackage{stfloats} %caption footnote
 %彩色方塊文字
@@ -61,16 +73,8 @@
 %圖的文字編碼
 \usepackage[labelfont=bf, font={small}]{caption}
 
-%中文package
-\usepackage{CJKutf8}
-
-%畫圖
-\usepackage{tikz}
-\usetikzlibrary{positioning}
 
 %Reference
 \usepackage[numbers]{natbib}
 %\usepackage[round]{natbib}
 \bibliographystyle{unsrtnat}
-
-\usepackage{multicol}
