--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+% !TEX encoding = UTF-8 Unicode
 \documentclass{article}
 
 
@@ -23,5 +24,9 @@ Describe how you design the strategy to answer queries. Does your strategy work 
 
 \section{Additional Notes (*optinal)}
 Supply any other efforts/findings you have tried/discovered that (may) improves your implementation.
+
+
+\section{測試}
+中文測試 English test
 
 \end{document}
