--- a/setup.tex
+++ b/setup.tex
@@ -2,7 +2,13 @@
 
 
 
-\usepackage{CJKutf8}
+
+%中文設定
+\usepackage{xeCJK} %讓中英文字體分開設置
+% Noto Font: Download here: https://www.google.com/get/noto/#sans-hant
+\setCJKmainfont{Noto Sans CJK TC}
+
+
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \usepackage{fancyhdr}
