--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,9 @@ Supply any other efforts/findings you have tried/discovered that (may) improves 
 
 
 \section{測試}
-中文測試 English test
+中文測試 English test \cite{mobility2020}.
+
+%Reference
+\bibliography{library}
 
 \end{document}
